# BuzatuCPP

./: ChangeLog  README.md
CMake/Tutorial/: README.md  run.sh
CMake/Tutorial/code/source/: CMakeLists.txt  CTestConfig.cmake  License.txt  TutorialConfig.h.in  tutorial.cxx
CMake/Tutorial/code/source/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cxx
CMake/example1/: run.sh
CMake/example1/code/source/: CMakeLists.txt  test.cpp  test.h
CMake/skeleton/: run.sh
CMake/skeleton/code/source/: CMakeLists.txt  skeleton.cpp  test.cpp
CMake/testBitset/code/source/: test.cpp
CMake/testInstallationFromTutorial/: README
CMake/testInstallationFromTutorial/code/source/: CMakeLists.txt  test.cpp
CMake/testOPENGLandGLUT/: run.sh
CMake/testOPENGLandGLUT/code/source/: test.cpp
CMake/testZMQ/: CMakeLists.txt  README.md  testZMQ2.cpp
CMake/tutorialOPENGL/: README.md
CMake/tutorialOPENGL/code/source/: CMakeLists.txt  test.cpp  test.h
Course/1/: clean.sh
Course/1/Lecture/: AdrianLecture1.pptx
Course/1/Solution/: 1a.C  1b.C  1c.C  1d.C  1e.C  1f.C  1g.C  1h.C  1i.C  1j.C  1k.C  1l.C  1m.C  1n.C  1n.h  README.txt  helloworld.C  output3D_float.txt  output3D_int.txt  tasks.txt
Course/2/Lecture/: AdrianLecture2.pptx
Course/2/Solution/: 1a.C  1b.C  1c.C  1d.C  1e.C
Course/2/Task/: tasks.txt
Course/3/Lecture/: AdrianLecture3.pptx
Course/3/Solution/: HOW_TO_RUN.txt  Makefile
Course/3/Solution/1/: README.txt  a.C  b.C  c.C  clean.sh  d.C  e.C
Course/3/Solution/2/: Makefile  README.txt  main.C  planet.h
Course/3/Solution/3/: Makefile  README.txt
Course/3/Solution/3/C/: main.C  planet.C
Course/3/Solution/4/: Makefile  README.txt
Course/3/Solution/4/C/: planet.C
Course/3/Solution/4/h/: main.h
Course/3/Task/: tasks.txt
Course/4/Lecture/: AdrianLecture4.pptx
Course/4/Solution/: Makefile  README.txt
Course/4/Solution/include/: Output.h  System.h  Vector3D.h  main.h
Course/4/Solution/src/: Output.cxx  System.cxx  Vector3D.cxx  main.cxx
Course/4/Task/: improvement.txt  tasks.txt
Course/LectureSarahAllwoodSpiers/: clean.sh
Course/LecturesSarahBoutle/AssignmentSarahBoutle2/: info.txt
Course/LecturesSarahBoutle/AssignmentSarahBoutle3/: tasks.txt
Package/: Makefile  Makefile.arch  Makefile.common2  README.txt
Package/Date/: Date.cxx  Date.h  Makefile
Package/Helper/: Helper.cxx  Helper.h
Package/Helper2/: Helper2.cxx  Helper2.h  Makefile
Package/TemplatedClass/: TemplatedClass.cxx  TemplatedClass.h
Package/TemplatedClassStreamer/: TemplatedClassStreamer.cxx  TemplatedClassStreamer.h
Package/Vector/: Vector.cxx  Vector.h
Package/Vector3D/: Vector3D.h
Package/data/: inputfile.txt
Package/testCommandLineArguments/: testCommandLineArguments.cxx  testCommandLineArguments.h
Package/testCommandLineArgumentsWithUsageMethod/: Makefile  testCommandLineArgumentsWithUsageMethod.cxx  testCommandLineArgumentsWithUsageMethod.h
Package/testDate/: Makefile  testDate.cxx  testDate.h
Package/testFunctionDefaultValue/: testFunctionDefaultValue.cxx  testFunctionDefaultValue.h
Package/testFunctionOverloading/: testFunctionOverloading.cxx  testFunctionOverloading.h
Package/testFunctionPassByPointer/: testFunctionPassByPointer.cxx  testFunctionPassByPointer.h
Package/testFunctionPassByReference/: testFunctionPassByReference.cxx  testFunctionPassByReference.h
Package/testFunctionTemplate/: testFunctionTemplate.cxx  testFunctionTemplate.h
Package/testHelloWorld/: testHelloWorld.cxx  testHelloWorld.h
Package/testHowLongItRuns/: testHowLongItRuns.cxx
Package/testReadFromFile/: testReadFromFile.cxx  testReadFromFile.h
Package/testStdMap/: testStdMap.cxx  testStdMap.h
Package/testStdVector/: Makefile  testStdVector.cxx  testStdVector.h
Package/testTemplatedClass/: Makefile  testTemplatedClass.cxx  testTemplatedClass.h
Package/testTemplatedClassStreamer/: Makefile  testTemplatedClassStreamer.cxx  testTemplatedClassStreamer.h
Package/testUseOurSharedLibrary/: Makefile  testUseOurSharedLibrary.cxx  testUseOurSharedLibrary.h
Package/testUseOurSharedLibraryThatUsesAnotherSharedLibraryOfOurs/: Makefile  testUseOurSharedLibraryThatUsesAnotherSharedLibraryOfOurs.cxx  testUseOurSharedLibraryThatUsesAnotherSharedLibraryOfOurs.h
Package/testVector/: Makefile  testVector.cxx  testVector.h
Package/testVector3D/: Makefile  testVector3D.cxx  testVector3D.h
Package/testWriteToFile/: testWriteToFile.cxx  testWriteToFile.h
Standalone/exampleC/: clean.sh  compile_withClang.sh  compile_withGCC.sh  compile_withGCC9.sh
Standalone/exampleCPP/: .gitignore  compile_withClang.sh  compile_withGCC.sh  compile_withGCC9.sh  example.cpp
